自动获取git路径